Murphy System/outputs/workspace_output_1769724371_1259.txt
  File "murphy_complete_integrated.py", line 1923
    &quot;&quot;&quot;Generate decision gates dynamically for a task&quot;&quot;&quot;
    ^
SyntaxError: invalid syntax
